# uartassist

./: .clang-format  .gitignore  CMakeLists.txt  Config.h.in  README.md  build.sh  test_config.json
inc/: args_parser.h  json_config.h  mydebug.h  uart_assist.h  uart_test.h  uartdev.h
src/: args_parser.c  json_config.c  main.c  uart_assist.c  uart_test.c
